feat: enhance HttpServer for concurrent request handling and graceful shutdown